fix: Navbar was covering section headings when clicked ont o bring the users to their choosen section, fixed this by adding scroll-margin-top to css file for each section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+
 html {
 	scroll-behavior: smooth;
 	-webkit-overflow-scrolling: touch;
@@ -20,6 +21,10 @@ html {
 
   /* Nav bar */
   
+  .fixed-top {
+	position: fixed-top;
+  }
+
   .navbar-brand {
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -50,7 +55,7 @@ html {
   }
  
  .navbar-toggler {
-	 background-color: #fff;
+	background-color: #fff;
     padding: .25rem .75rem;
     font-size: 1.25rem;
     line-height: 1;
@@ -62,6 +67,10 @@ html {
 	background-color: #fff !important;
 }
 
+.navsize {
+    padding-top: 100px;
+    margin-top: -100px;
+}
 
   /* Rounded images */
   .image-fit-cover {
@@ -78,6 +87,7 @@ html {
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: cover;
+	scroll-margin-top: 1.5em;
   }
   
    .jumbotron-custom {
@@ -170,9 +180,10 @@ html {
 	  
 	  /* about section */
 	  
-  .about-section {
-  text-align: center;
-  line-height: 1.4;
+	#about-section {
+  	text-align: center;
+  	line-height: 1.4;
+  	scroll-margin-top: 2em;
   } 
   
   /* how it works section */
@@ -180,6 +191,7 @@ html {
   #works-section {
    background-color: #D05353;
    color: #fff;
+   scroll-margin-top: 2em;
   }
   
   .works-heading{
@@ -196,6 +208,9 @@ html {
  
   /*-------------------------------- Meet the team section */
   
+  #team-section {
+	scroll-margin-top: 2em;
+  }
     .team-member {
 	  margin-bottom: 3rem;
 	  text-align: center;
@@ -206,7 +221,7 @@ html {
 	  border: 0.5rem solid #D05353;
 	}
 	.team-member h4 {
-	  margin-top: 1.5rem;
+	  margin-top: 2rem;
 	  margin-bottom: 0;
 	}
 	
@@ -219,6 +234,7 @@ html {
   #testimonial-section{
 	  background-color: #D05353;
 	  color:#fff;
+	  scroll-margin-top: 2em;
   }
   
   .col-center {
@@ -330,7 +346,9 @@ html {
   
    /* login form */
   
-  
+   #sign-up-forms {
+	scroll-margin-top: 1.5em;
+   }
   
   /* Gallery */
   
@@ -381,9 +399,6 @@ html {
 	  text-align: center;
   }
 
-/* Modal */
-
-  
 /* Media querys */
 
 @media (min-width: 576px) {
